src/tests/testfiles/variable-declarations/22.txt
testfiles/variable-declarations/22.c:4:6: error: size of array ‘a’ has non-integer type (have 'char *')
int a[str] = {1, 2, 3, 4, 5};
    ^
